--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,33 @@
-# Xcode
-build/*
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-*.xcworkspace
-!default.xcworkspace
-xcuserdata
-profile
-*.moved-aside
-
 # osx noise
 .DS_Store
+profile
+
+# xcode noise
+build/*
+*.mode1
+*.mode1v3
+*.mode2v3
+*.perspective
+*.perspectivev3
+*.pbxuser
+xcuserdata
+build.output
+*.xcodeproj/xcuserdata/*
+!*.xcodeproj/xcshareddata/*
+pkg/
+!*.xcodeproj/*.pbxproj
+
+DerivedData
+
+Pods
+Podfile.lock
+
+# svn & cvs
+.svn
+CVS
+
+# AppCode noise
+.idea/*
+
+# Copy-Paste Detection results
+cpd-output.xml
